<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvPrivacyPolicyHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/privacy_policy_header"
        android:textColor="@color/grey_900"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLastUpdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/privacy_policy_last_updated"
        app:layout_constraintStart_toStartOf="@+id/tvPrivacyPolicyHeader"
        app:layout_constraintTop_toBottomOf="@+id/tvPrivacyPolicyHeader"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/privacy_policy_body"
        app:layout_constraintStart_toStartOf="@+id/tvLastUpdated"
        app:layout_constraintTop_toBottomOf="@+id/tvLastUpdated"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvViewPrivacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/privacy_policy_text_button"
        android:textColor="@color/light_blue_600"
        app:layout_constraintStart_toStartOf="@+id/tvBody"
        app:layout_constraintTop_toBottomOf="@+id/tvBody"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designed_by_john_dewey"
        android:fontFamily="@font/roboto_medium"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>