<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="32dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="42dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="22dp"
                    android:fontFamily="@font/archivo_black_regular"
                    android:text="@string/login_brand_name_datavault"
                    android:textColor="@color/orange_700"
                    android:layout_gravity="center"
                    android:textSize="32sp"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_datavault_icon_orange_500"
                    app:shapeAppearanceOverlay="@style/rounded_corner"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_edit_text_email"
                app:startIconDrawable="@drawable/ic_login_email"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red_400"
                android:layout_marginBottom="10dp"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_edit_text_password"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_login_password"
                app:endIconMode="password_toggle"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red_400"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvLoginForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_text_view_forgot_password"
                android:textColor="@color/light_blue_600"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginBottom="12dp"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="12dp"
                android:text="@string/login_button_text"
                android:textColor="@color/grey_200"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_medium"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
                style="@style/Widget.MaterialComponents.Button" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/login_text_view_not_have_account"/>
                <TextView
                    android:id="@+id/tvLoginSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/login_text_view_sign_up"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/light_blue_600"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/divider1"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="?android:attr/listDivider" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="14sp"
                    android:text="@string/login_text_view_login_with"/>
                <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="?android:attr/listDivider" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btnLoginWithGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/login_button_text_google"
                android:textAllCaps="true"
                android:textColor="@color/grey_800"
                android:textStyle="bold"
                android:padding="12dp"
                android:fontFamily="@font/roboto_medium"
                android:textAlignment="center"
                android:backgroundTint="@color/white"
                app:icon="@drawable/ic_google"
                app:iconTint="@null"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/login_agree_policy"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textPrivacyAndTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_privacy_terms"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/light_blue_600" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>